--- a/style.css
+++ b/style.css
@@ -1,8 +1,60 @@
-body{
-	font:;
-	
+h1 {
+    color: #8e8e8e;
+    font-family: "kollektif";
+    font-size: 90px;
 }
-.grid-container {
-  display: grid;
-  grid-template-columns: auto auto auto auto;
+
+body {
+    background-color: white;
+    font-family:"champagne and limousine";
+    color:#c9c9c9;
+    font-size: 40px; 
+    text-align: 
+    margin: 
 }
+
+/*#guess {
+    letter-spacing: 17px;
+    font-size: 32px;
+    height: 143px;
+    line-height: 184px;
+    margin-top: -30px;
+}
+
+#hang-img {
+    font-size: 30px;
+    margin: -185px;
+}
+
+
+#reset {
+    border-radius: 8px;
+    padding: 7px 28px;
+    margin-bottom: 37px;
+    font-size:15px;
+    background-color:
+    font-family: 
+    cursor: pointer;
+    letter-spacing: 4px;
+}
+
+#wrong {
+    position: relative;
+    margin-top: -181px;
+    font-family:
+    font-size: 24px;
+}
+
+#message {
+    position: relative;
+    width: 50%;
+    left: 1px;
+    top: -177px;
+    margin: -492px auto;
+    display: none;
+    border-radius: 5px;
+    color: 
+    padding: 130px;
+    font-family: 
+    font-size: 30px;
+} */
